# nearc

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  GAS-PROFILE-REPORT.md  MANIFEST.in  NEAR-ABI.md  README.md  example.py  example.wasm  pyproject.toml
.github/workflows/: docker.yml  lint.yml  publish.yml  release.yml  test.yml
docs/: reproducible-builds.md
example/: main.py  main.wasm  pyproject.toml
near_py_tool/: api.py  cli.py  click_utils.py  near.py  run_command.py
near_py_tool/assets/new-project-template/: contract.py  pyproject.toml
near_py_tool/assets/new-project-template/.github/workflows/: deploy-production.yml  deploy-staging.yml  test.yml
near_py_tool/commands/: abi.py  build.py  create_dev_account.py  deploy.py  new.py
near_py_tool/tests/: deploy_contract.py  expensive_calc.py  fungible_token.py  lowlevel_api.py  lowlevel_minimal.py  promise_api.py
src/nearc/: __init__.py  abi.py  analyzer.py  builder.py  cli.py  compiler.py  exports.py  manifest.py  metadata.py  reproducible.py  utils.py
