[project]
name = "nearc"
version = "0.1.3"
description = "Python to WebAssembly compiler for NEAR smart contracts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.4",
    "rich-click>=1.8.6",
]

[project.scripts]
nearc = "nearc:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
    "types-toml>=0.10.8.20240310",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
